keda-http-addon/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keda-demo
  namespace: keda-demo
  labels:
    app: keda-demo
    pod: keda-demo
spec:
#  replicas: 1
  selector:
    matchLabels:
      app: keda-demo
  template:
    metadata:
      labels:
        app: keda-demo
        pod: keda-demo
    spec:
      containers:
        - name: knative-demo
          image: dev.local/dummy-autoscale-app:latest      
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
