keda-http-addon/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keda-demo
  namespace: keda-demo
  labels:
    app: keda-demo
spec:
  selector:
    app: keda-demo
  ports:
    - name: http
      port: 80
      targetPort: 8080
