keda-http-addon/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keda-http-proxy
  namespace: keda
spec:
  rules:
  - host: keda-demo.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keda-add-ons-http-interceptor-proxy      # z.B. keda-add-ons-http-interceptor-proxy
            port:
              number: 8080          # z.B. 8080
